@@ -12,12 +12,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.util.StringUtils;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
@@ -74,6 +73,23 @@ public class SearchController {
         return SysResult.fail("查询失败", null);
     }
 
+    @PostMapping("pop")
+    public SysResult getPop(String lang) {
+        try {
+            String[] result = null;
+            if (lang.equals("zh")) {
+                result = new String[] {"迁移", "docker", "mysql", "yum", "建设", "ssh", "生命周期", "虚拟化"};
+            } else {
+                result = new String[] {"docker", "mysql", "yum", "openstack", "cla"};
+            }
+
+            return SysResult.ok("查询成功", result);
+        } catch (Exception e) {
+            log.error(e.getMessage());
+            e.printStackTrace();
+        }
+        return SysResult.fail("查询失败", null);
+    }
 
 
     @PostMapping("sort")
@@ -115,19 +131,31 @@ public class SearchController {
      */
     @Scheduled(cron = "${scheduled.cron}")
     public String scheduledTask() throws IOException {
+        boolean success = false;
         Process process;
         try {
-            log.info("===============开始拉取仓库资源=================");
-            process = Runtime.getRuntime().exec(s.updateDoc);
-            process.waitFor();
-            List<String> result = IOUtils.readLines(process.getInputStream(), StandardCharsets.UTF_8);
-            log.info(result.toString());
-            log.info("===============仓库资源拉取成功=================");
-        } catch (IOException | InterruptedException e) {
+            log.info("===============开始更新仓库资源=================");
+            ProcessBuilder pb = new ProcessBuilder(s.updateDoc);
+            Process p = pb.start();
+            BufferedReader reader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+            String line = null;
+            while ((line = reader.readLine()) != null)
+            {
+                log.info(line);
+                if (line.contains("build complete in")) {
+                    success = true;
+                }
+            }
+            log.info("===============仓库资源更新成功=================");
+        } catch (IOException e) {
             log.error(e.getMessage());
         }
 
-        searchService.refreshDoc();
+        if (success) {
+            searchService.refreshDoc();
+        } else {
+            log.info("更新数据失败，查看日志");
+        }
         return "success";
     }
 }
